# nord-nm-gui

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  NOTES.md  README.md  install.sh  nord-nm-gui.desktop  nord_nm_gui.desktop  nord_nm_gui.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
nord_nm_gui/: __init__.py  functions.py  globals.py
